# python_brasil_2025

./: .gitignore  README.md  convert_qmd_to_ipynb.sh  panel.qmd  pyproject.toml  reduction.ipynb  requirements.txt
.github/workflows/: docs.yml
book/: .gitignore  _quarto.yml  index.qmd  pyproject.toml  references.bib
book/content/pt/extra/: sktime_custom.qmd
book/content/pt/part1/: 00_intro.qmd  01_naive.qmd  03_ets_and_ar.qmd  04_metricas.qmd  components_and_diff.qmd  ets_and_ar.qmd  index.qmd
book/content/pt/part2/: 04_hierarchical_forecasting.qmd  exog_variables.qmd  feature_engineering.qmd  hierarchical_forecasting.qmd  ml_models.qmd  panel_data.qmd  probabilistic_forecasting.qmd  probabilistic_metrics.qmd
book/content/pt/part3/: deep_learning.qmd  hierarchical_forecasting.qmd  hierarchical_forecasting.quarto_ipynb  panel_data.qmd  panel_data.quarto_ipynb
book/content/pt/part3/hierarchical_forecasting_files/execute-results/: html.json
book/content/pt/part4/: sktime_custom.qmd
book/latest/: index.html  search.json
book/latest/content/pt/extra/: sktime_custom.html
book/latest/content/pt/part1/: components_and_diff.html  ets_and_ar.html  index.html  metricas.html  naive.html
book/latest/content/pt/part2/: deep_learning.html  exog_variables.html  hierarchical_forecasting.html  ml_models.html  panel_data.html
dev/: index.html  search.json
latest/: search.json
notebooks/extra/: sktime_custom.ipynb
notebooks/part1/: 00_intro.ipynb  01_naive.ipynb  02_components_and_diff.ipynb  03_ets_and_ar.ipynb  04_metricas.ipynb  components_and_diff.ipynb  (+2 more)
(+113 files in other folders)
